[package]
name = "po_extra"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.24"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
# mockito = "1.7"
tokio-test = "0.4"
