[package]
name = "po_extra"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.24"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
